@@ -6,6 +6,12 @@
 
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 \newcommand{\sspace}{\ifelse{latex}{\out{~}}{ }}
+\section{Changes in version 1.0.5 (2018-10-23)}{
+ \itemize{ 
+    \item Major update: Tariffs was calculated as counts of symptoms in previous versions. Now they are calculated as rates of symptoms.
+    \item Remove the default resampling step of training data for obtaining uniform cause distributions. Resampling can still be performed by setting nboot.rank to be a positive number.
+    }
+}
 \section{Changes in version 1.0.4 (2018-08-28)}{
  \itemize{ 
     \item Fix error in mismatching CSMF to cause names.
